--- a/others.html
+++ b/others.html
@@ -76,7 +76,7 @@
                 class="btn"
                 type="button"
                 value="View"
-                onClick="location.href='view.html'"
+                onClick="location.href='view.php'"
               />
             </div>
           </td>
